doc: minor change abstract

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -36,7 +36,7 @@ s328222@studenti.polito.it}
 \maketitle
 
 \begin{abstract}
-RSD is a sensor that tracks the position of passing particles. Throughout this report, we propose a data science pipeline that uses as input several features extracted by the RSD signals, removes the noise and the outliers, and predicts the passing position with a regression model. Three regression estimators are thoroughly discussed. The results outperform a public baseline and the scores of the same models on the original data.
+RSD is a sensor that tracks the position of passing particles. Throughout this report, we propose a data science pipeline that uses as input several features extracted by the RSD signals, removes the noise and the outliers, and predicts the passing position with a regression model. Three regression estimators are thoroughly discussed. The results outperform a public baseline and the scores of the same models trained on the original data.
 \end{abstract}
 
 \section{Problem overview}
